--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Akka" Version="1.4.16" />
+    <PackageReference Include="Akka.TestKit.NUnit3" Version="1.3.8" />
     <PackageReference Include="FluentAssertions" Version="5.10.3" />
     <PackageReference Include="NUnit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.16.1" />
@@ -18,6 +20,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ClassLib\ClassLib.csproj" />
+    <ProjectReference Include="..\Lottery.Actors\Lottery.Actors.csproj" />
   </ItemGroup>
 
 </Project>
