--- a/Lottery.Actors/Lottery.Actors.csproj
+++ b/Lottery.Actors/Lottery.Actors.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Akka" Version="1.4.16" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ClassLib\ClassLib.csproj" />
+  </ItemGroup>
+
 </Project>
