--- a/Lottery.Actors/Lottery.Actors.csproj
+++ b/Lottery.Actors/Lottery.Actors.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
     <PackageReference Include="Akka" Version="1.4.16" />
+    <PackageReference Include="Akka.Persistence" Version="1.4.16" />
+    <PackageReference Include="Akka.Persistence.PostgreSql" Version="1.3.9" />
   </ItemGroup>
 
   <ItemGroup>
