--- a/Lottery.Console/Lottery.ConsoleRunner.csproj
+++ b/Lottery.Console/Lottery.ConsoleRunner.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Akka.Logger.Serilog" Version="1.4.11" />
+    <PackageReference Include="Akka.Persistence.PostgreSql" Version="1.3.9" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
     <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
   </ItemGroup>
