--- a/Lottery.Console/Lottery.ConsoleRunner.csproj
+++ b/Lottery.Console/Lottery.ConsoleRunner.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Akka.Cluster" Version="1.4.16" />
     <PackageReference Include="Akka.Logger.Serilog" Version="1.4.11" />
     <PackageReference Include="Akka.Persistence.PostgreSql" Version="1.3.9" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
